n8n/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-hs
  labels:
    app: n8n
    role: main
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: n8n
    role: main
  ports:
    - name: http
      port: 5678
      targetPort: 5678
