n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        # Trocando para traefik.me
        - n8n.129.213.28.76.traefik.me
      secretName: n8n-tls-traefik  # Mudei o nome de novo para limpar o histórico
  rules:
    - host: n8n.129.213.28.76.traefik.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
